fixed buttons hover color not showing on some variations

--- a/chrome.css
+++ b/chrome.css
@@ -39,7 +39,7 @@ panel toolbarseparator {
 
 @media (-moz-bool-pref: "mod.tidypopup.usecustomhovercolor") {
   :is(panelview .toolbarbutton-1, toolbarbutton.subviewbutton, .widget-overflow-list .toolbarbutton-1, .toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), [overflowedItem="true"]) > toolbarbutton) {
-    &:not([disabled]):hover {
+    &:not([disabled="true"]):hover {
       background-color: var(--mod-tidypopup-hovercolor); 
     }
   }
@@ -47,7 +47,7 @@ panel toolbarseparator {
 
 @media not (-moz-bool-pref: "mod.tidypopup.usecustomhovercolor") {
   :is(panelview .toolbarbutton-1, toolbarbutton.subviewbutton, .widget-overflow-list .toolbarbutton-1, .toolbaritem-combined-buttons:is(:not([cui-areatype="toolbar"]), [overflowedItem="true"]) > toolbarbutton) {
-    &:not([disabled]):hover {
+    &:not([disabled="true"]):hover {
       background-color: rgba(80, 80, 250, 1); 
     }
   }
@@ -74,7 +74,7 @@ menu, menuitem, menucaption {
 
 @media (-moz-bool-pref: "mod.tidypopup.usecustomhovercolor"){
   menu, menuitem, menucaption {
-    &:not([disabled]):hover {
+    &:not([disabled="true"]):hover {
       background-color: var(--mod-tidypopup-hovercolor); 
     }
   }
@@ -82,10 +82,10 @@ menu, menuitem, menucaption {
 
 @media not (-moz-bool-pref: "mod.tidypopup.usecustomhovercolor"){
   menu, menuitem, menucaption {
-    &:not([disabled]):hover {
-      background-color: rgba(80, 80, 250, 1); 
+    &:not([disabled="true"]):hover {
+      background-color: rgba(80, 80, 250, 1) !important; 
     }
-  } 
+  }
 }
 
 menuseparator::before {
